# VisionAuditing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
adapter/detection/: objectdetector.cpp  objectdetector.h
adapter/imageworker/: imageworker.cpp  imageworker.h
adapter/mot/: tracker.cpp  tracker.h
adapter/videocapturer/: videocapturer.cpp
domain/barcode/: dto.cpp  dto.h
domain/detection/: dto.cpp  dto.h
domain/mot/: dto.cpp  dto.h
domain/product/: valueobjects.cpp  valueobjects.h
src/adapter/: CMakeLists.txt
src/adapter/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/adapter/ui/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/adapter/ui/splash/: CMakeLists.txt  circlesplash.cpp  circlesplash.h  circlesplash.ui
src/adapter/video/: CMakeLists.txt  capturer.cpp  capturer.h  worker.cpp  worker.h
src/app/: CMakeLists.txt  main.cpp  session.cpp  session.h
src/domain/: CMakeLists.txt
src/domain/entities/: CMakeLists.txt  entity.cpp  entity.h  order.h  product.h  shipping_order.cpp  shipping_order.h
src/domain/services/: ibarcoder.h  idetector.h  itracker.h
src/domain/value_objects/: CMakeLists.txt  barcode.cpp  barcode.h  bounding_box.cpp  bounding_box.h  detection_box.cpp  detection_box.h  track.cpp  track.h
src/infra/: CMakeLists.txt
src/infra/barcode/: CMakeLists.txt  barcoder.cpp  barcoder.h
src/infra/detector/: CMakeLists.txt  yolor.cpp  yolor.h
src/infra/mot/: CMakeLists.txt  tracker.cpp  tracker.h
